--- a/text/ch4-gemini.tex
+++ b/text/ch4-gemini.tex
@@ -116,7 +116,7 @@ Plasma mirrors are effective and now standardised tools for the improvement of l
 \subsection{Contrast on GEMINI PW}
 % Observation of the ZVP mechanism and HHG production requires a sufficiently steep density gradient at the laser-plasma interface. An inevitable challenge of \ac{CPA} laser systems is the existence of prepulses that heat targets, causing them to expand significantly before the arrival of the main pulse. To increase the laser contrast, to the point where there is no preplasma formation, GEMINI-PW utilises a Double Plasma Mirror setup prior to the main interaction \cite{doumyCompleteCharacterizationPlasma2004}. Investigation of preplasma generation will occur in parallel to the main experimental goals.
 
-An underlying current of this thesis has been the subject of prepulse and corresponding preplasma expansion. While bright X-ray harmonics have been observed on both the Vulcan \cite{dromeyBrightMultikeVHarmonic2007} and ORION sub-ps laser systems, few cycles laser pulse systems routinely underperform. To date only at normal incidence (thus minimising heating) have harmonics been observed on GEMINI PW \cite{dromeyCoherentSynchrotronEmission2013}. Evidence points to preplasma formation. The only parameter that has been shown to suppress HHG from a p-polarised relativistic laser pulse is an overlarge preplasma \cite{dollarScalingHighorderHarmonic2013} and indeed the transition to suppression is rapid \cite{kahalyDirectObservationDensityGradient2013}.
+An underlying current of this thesis has been the subject of prepulse and corresponding preplasma expansion. While bright X-ray harmonics have been observed on both the Vulcan \cite{dromeyBrightMultikeVHarmonic2007} and ORION sub-ps laser systems, few cycles laser pulse systems routinely underperform. To date only at normal incidence (thus minimising heating) have harmonics been observed on GEMINI PW \cite{dromeyCoherentSynchrotronEmission2013}. Evidence points to preplasma formation. The only parameter that has been shown to suppress HHG from a p-polarised relativistic laser pulse is an overlarge preplasma \cite{dollarScalingHighorderHarmonic2013} and indeed the transition to suppression is rapid \cite{kahalyDirectObservationDensityGradient2013}. While there exists established theories on the operation of plasma mirrors, these are based on fairly large assumptions that remain untested. Given the notoriety of the challenge of observing SHHG despite laser contrast being a relatively well understood concept and the general successes attributed to hydrodynamic codes, it seems quite possible that these large assumptions are the critical concern. They could also be responsible for the range of optimal scale lengths observed in experiments. 
 
 The last available contrast measurements of the GEMINI PW laser are presented in Figure \ref{fig:geminicontrast}. 
 \begin{figure}
@@ -127,47 +127,40 @@ The last available contrast measurements of the GEMINI PW laser are presented in
 \end{figure}
 The \ac{DPM} setup improves the contrast by at least $10^5$. More recent measurements of the GEMINI PW DPM system have found a reflectivity of \qty{1.23e-4}{\%} and \qty{60}{\%} before and after switch on, corresponding to a contrast enhancement of \num{4.88e5}. Note that the DPM setup includes an acetate debris shield, without which shot quality would quickly degrade from plasma ablation between the mirrors.
 
-HYADES simulations of the GEMINI PW pulse demonstrate acceptable preplasmas. 
+
 % TODO includes a plot of preplasma from HYADES.
-Note in Figure \ref{fig:geminicontrast} the early switch-on of the plasma mirror system. For a peak intensity on \ac{PM} of \qty{1e16}{W.cm^{-2}}, this switch occurs an order of magnitude below typical ionising intensities \cite{umstadterRelativisticLaserPlasma2003}. Early PM switch ons is nothing new \cite{caiTimeresolvedMeasurementsReflectivity2009}, however, it points to a serious issue. Such early switch-ons cannot be described by the basic theory nor hydrodynamic simulation. Perhaps all can be explained by the complex interaction of the laser pulse with the AR coating. Indeed perhaps the very optic deemed to save us is our great enemy in the battle for harmonics. Yet still the hydrodynamic codes fail us. 
+Note in Figure \ref{fig:geminicontrast} the early switch-on of the plasma mirror system. For a peak intensity on \ac{PM} of \qty{1e16}{W.cm^{-2}}, this switch occurs an order of magnitude below typical ionising intensities \cite{umstadterRelativisticLaserPlasma2003}. Early PM switch-ons is nothing new \cite{caiTimeresolvedMeasurementsReflectivity2009}, however, it points to a serious issue. Such early switch-ons cannot be described by the basic theory nor hydrodynamic simulation. Perhaps all can be explained by the complex atomic scale interaction of the laser pulse with the dielectric AR coating. Indeed, perhaps the haste to maximise the contrast at the nanosecond pedestal has been the downfall at the picosecond scale. And yet, providing the measured GEMINI PW contrast data to HYADES simulations predicts acceptable preplasmas, inconsistent with the experiment results. 
 
-While there exists established theories on the operation of plasma mirrors, these are based on fairly large assumptions that remain untested. Given the notoriety of the challenge of observing SHHG despite laser contrast being relatively well understood and the general successes attributed to hydrodynamic codes, it seems quite possible that these large assumptions are the critical concern. They could also be responsible for the range of optimal scale lengths observed in experiments. Recent work from MY and BD has shown evidence of the propagation of an opacity front into a target due to laser prepulse before ionisation and plasma formation. Such a transition from transparency will dramatically affect laser pulse energy deposition into the target leading to significantly earlier plasma mirror `switch on' times. The interaction appears to occur over roughly 3 ps, a timescale to which preplasma scale length is highly sensitive. Note that such an interaction would be impossible to simulate given the multiple scales upon which preplasma formation occurs and the complexity of the transition to opacity. The GEMINI experiment, however, provides an excellent opportunity to probe this process in parallel to the main experimental goals.
+Recent work has shown evidence of the propagation of an opacity front into a target due to laser prepulse before ionisation and plasma formation. Such a transition from transparency will dramatically affect laser pulse energy deposition into the target leading to significantly earlier plasma mirror switch-on times. The interaction appears to occur a few picoseconds, a timescale to which preplasma scale length is highly sensitive. Note that such an interaction would be impossible to simulate given the multiple scales upon which preplasma formation occurs and the complexity of the transition to opacity. The GEMINI experiment, however, provides an excellent opportunity to probe this process in parallel to the main experimental goals.
 
-A simple model for opacity generation. A pure fused silica target consists of valence and conduction bands only. Electrons are excited to the conduction band by the laser and then simply drop back down again. As impurities are added to the target, the band structure becomes more complex and electrons can drop to intermediate states from which they cannot then return easily to the ground state. Thus, more energy can be absorbed and the transition to opacity occurs at earlier times.
+ A pure fused silica target consists of valence and conduction bands only. Electrons are excited to the conduction band by the laser and then simply drop back down again. As impurities are added to the target, the band structure becomes more complex and electrons can drop to intermediate states from which they cannot then return easily to the ground state. Thus, more energy can be absorbed and the transition to opacity occurs at earlier times. Hence, the more pure a silica target, the later the transition to opacity and the smaller the preplasma scale length. This also suggests switching out the first plasma mirror for a pure uncoated silica target could also improve contrast at the timescales where it matters. Now the first PM deals with the ps pedestal with its later switch on and the second PM the ns pedestal with its AR coating.
 
-Hence, the more pure a silica target, the later the transition to opacity and the smaller the preplasma scale length. This also suggests switching out the first plasma mirror for a pure uncoated silica target could also improve contrast where it matters. Since we are fairly assured the DPM removes all ns prepulse pedestal, it seems likely it is the ps prepulse pedestal that is causing the issue. Now PM1 deals with the ps pedestal (with the later switch on) and PM2 the ns pedestal (with the AR coating). Again this is a simple test where we compare optimum prepulse delay times.
+Presumably early plasma formation also occurs for Vulcan or ORION targets, however, once relativistic intensities are reached, recompression will occur. For such long pulse durations, there is sufficient time for steepening before the main interaction. 
 
-Presumably this early plasma formation also occurs for Vulcan or ORION targets, however, once relativistic intensities are accessed, recompression of the target will occur. For these long pulse durations, there is sufficient time for steepening before the main interaction. Note that contrast reduction is even more relevant for next-gen laser facilities where a $10^-4$ contrast is already relativistic! Dramatically affecting interactions. Furthermore, ion acceleration via TNSA of nanometre foil targets is a very popular use case of high-power short pulse laser systems. Such next-gen systems require excellent contrast so if we can demonstrate contrast enhancement where it matters using the DPM adjustments, that will be very interesting.
+Contrast reduction will only become more critical with the arrival of sub-eta watt class next generation laser facilities where native picosecond pedestals will already be relativistic. Steep preplasma scale lengths is not only relevant to the matters presented in this thesis but is essential for any thin foil interaction including the popular use case of ion acceleration via TNSA.
 
-To investigate early plasma switch on, a \qty{50}{ps} chirped probe beam will be focused on the target. Optical spectrometers in transmission and reflection should identify opacity and plasma generation times respectively. This measurement could categorically demonstrate the failure of hydrodynamic codes for any pre-ionisation laser pulse intensities. One may wonder why such a failure is not identified in other branches of HED physics, such as the case of Inertial Confinement Fusion. It is simply a matter of scales. These effects are only relevant for the few femtosecond petawatt laser systems in this case of high sensitivity to preplasma scale length.
+To investigate early plasma switch on, a \qty{50}{ps} chirped probe beam will be focused on the target. Optical spectrometers in transmission and reflection will identify the opacity and plasma generation times respectively. This measurement could categorically demonstrate the failure of hydrodynamic codes for any pre-ionisation laser pulse intensities. One may wonder why such a failure is not identified in other branches of HED physics, such as the case of Inertial Confinement Fusion. It is simply a matter of scales. These effects are only relevant for the few femtosecond petawatt laser systems in this case of high sensitivity to preplasma scale length.
 % TODO look into cold opacity in hydro code
 To distinguish the probe beam from the bright non-linear target interaction, it will be focused on the interaction area out of the main interaction plane and with opposite polarisation.
 
-
-
-
-
 \subsubsection{Strategy}
-For this initial stage, the OHREX will be replaced with an XUV spectrometer since only the lowest orders will likely be visible. As of 2019, no experiment to confirm HB theory had been performed on a PW system \cite{vincentiAchievingExtremeLight2019}. These UV spectrometer measurements could be very interesting both to confirm the HB theory in the PW regime and to infer the intensity increase at PM focus. The first step will be to perform a scan around the focal spot of the laser. Wavefront curvature at the target from slight defocussing can reduce divergence from hole boring thus increasing intensity levels at the detector while also reducing pre-heating. The next action will be to apodise the beam, again this reduces the intensity on target and the harmonic beam divergence and has been shown to tip preplasma scale length into the optimal regime for HHG \cite{kahalyDirectObservationDensityGradient2013}.
+A series of contingencies has been developed to ensure the observation of harmonics under the assumption that preplasma scale length is the main issue. Phases increase in cost to peak laser intensity and therefore to the theoretical harmonic limit. During optimisation, the OHREX will be replaced with an XUV spectrometer since only the lowest orders will be visible. As of 2019, no experiment to confirm HB theory had been performed on a PW system \cite{vincentiAchievingExtremeLight2019}. Such UV spectrometer measurements could be very interesting both to confirm the HB theory in the PW regime and to infer the intensity increase at PM focus. The first step will be to scan through the focal spot of the laser. Wavefront curvature at the target from slight defocussing can reduce divergence from hole boring thus increasing intensity levels at the detector while also reducing pre-heating. 
 
-This will reduce the intrinsic prepulse intensity by the same factor as the main pulse. To ensure the SHHG roll-off is above the 2.4 keV harmonics (such that the signal on OHREX is non-negligible), we require $a_0 > 8$. Such apodisation would reduce the prepulse by roughly 10 times. Note that (assuming top-hat beam profile at near field) for apodisation of a beam from radius $r$ to $r'$, the beam energy reduces by a factor $(r'/r)^2$ while the spot size increases by a factor $r/r'$, thus the peak intensity reduces by a factor $(r'/r)^4$, $a_0 =8$ corresponds roughly to $r'/r = 0.5$. Apodising can also help remove higher spatial orders, improving the spot at focus. While harmonics were observed on the 1 J precursor to GEMINI PW, Astra-Gemini, apodising back to Astra-Gemini parameters does not guarantee success, the new front end leads to a new unique prepulse profile.
+The next action will be to apodise the beam, again this reduces the intensity on target and the harmonic beam divergence and has been shown to tip preplasma scale length into the optimal regime for HHG \cite{kahalyDirectObservationDensityGradient2013}. This will reduce the intrinsic prepulse intensity by the same factor as the main pulse. To ensure the SHHG roll-off is above the 2.4 keV harmonics (such that the signal on OHREX is non-negligible), requires $a_0 > 8$. Such apodisation would reduce the prepulse by $\approx$ 10 times. Corresponding a reduction in the beam radius of a factor of 2. Apodising can also help remove higher spatial orders, improving the spot at focus. While harmonics were observed on the 1 J precursor to GEMINI PW, Astra-Gemini, apodising back to Astra-Gemini parameters does not guarantee success, the new front end procudes a unique prepulse profile.
 
-One can also reduce the intensity on DPM leading to later switch-on times but a lower peak reflectivity. Failing that, there are more drastic measures available. First, a second target chamber layout has been designed that will reduce the angle of incidence on target to \qty{30}{\degree} and second, frequency doubling is known to significantly enhance contrast. In fact, as with ORION we likely go straight to overshooting. 
+The intensity on DPM can be reduced leading to later switch-on times but a lower peak reflectivity. Failing that, there are more drastic measures available. First, a second target chamber layout has been designed that will reduce the angle of incidence on target to \qty{30}{\degree} to reduce target heating and second, frequency doubling is known to significantly enhance contrast. In fact, as with ORION this will likely overshoot, producing effectively zero preplasma.
 
-This would be very useful for demonstrating the validity of contrast theory. The frequency doubling crystal available at GEMINI PW leads to an intensity reduction both from efficiency (\qty{25}{\%}) and apodisation (\qty{9}{\%}) (the crystal has a diameter of 60 mm), therefore if there is an improvement in signal, it must be from the improvement to contrast. While Kahaly \textit{et al} were able to observe harmonics for a beam apodised to $a_0 = 0.7$ provided the scale length was optimised, resorting to this method to produce harmonics would preclude the X-ray harmonic part of the experiment due to the reduction in intensity on target, however, it would justify the investment into a larger frequency doubling crystal for future HHG experiments at GEMINI PW. Note that despite the inevitability of efficiency cost due to the frequency doubling process, similar intensities on target could be realised provided a 25 \% efficiency non-apodising frequency doubling crystal. This is because you no longer need the DPM and you can focus to a smaller spot. Thus this could be a future route. However, such an optic would probably cost 100k so we need a good justification, this experiment could be just that.
+Testing frequency doubling would be very useful for demonstrating the validity of the new contrast theory. The frequency doubling crystal available at GEMINI PW will reduce the intensity on target both from the generation efficiency (\qty{25}{\%}) and apodisation (\qty{9}{\%}) (the crystal has a diameter of 60 mm), therefore if there is an improvement in signal, it must be from the improvement to contrast. While Kahaly \textit{et al} were able to observe harmonics for a beam apodised to $a_0 = 0.7$ provided the scale length was optimised, resorting to this method to produce harmonics would preclude the observation of X-ray harmonics ,however, it would justify the investment into a larger frequency doubling crystal for future HHG experiments at GEMINI PW. Such a setup would not require a DPM and the diffraction limited spot is smaller. Hence, despite the inevitability of efficiency cost due to the frequency doubling process, similar intensities on target could be realised provided a 25 \% efficiency non-apodising frequency doubling crystal.
 
-Once harmonics are visible, aspects of the system can be changed and the opacity and early switch-on hypotheses can be tested by looking for quantitative improvements to the signal. Replacing the pure fused silica target with impure BK7 or AR-coated targets should reduce the harmonic signal. Equally, replacing the first PM in the DPM chain with an uncoated PM should delay the PM switch on and potentially improve the signal. Note that the CWE signal is distinguishable from the HHG signal: it is more divergence and cuts off after the plasma frequency \cite{kahalyDirectObservationDensityGradient2013}.
-
-
+Once harmonics are visible, aspects of the system can be changed and the opacity and early switch-on hypotheses can be tested by looking for quantitative improvements to the signal. Replacing the pure fused silica target with impure BK7 or AR-coated targets should reduce the harmonic signal. Equally, replacing the first PM in the DPM chain with an uncoated PM should delay the PM switch on and improve the signal. Note that the CWE signal is distinguishable from the HHG signal: it is more divergence and experiences a sharp cuts off at the plasma frequency \cite{kahalyDirectObservationDensityGradient2013}.
 
 \subsection{Kahaly mirror}
-At some point, the signal will overshoot and enter the CWE regime, preferably early in the list of contingencies presented, and the preplasma scale length can now be optimised. A simple but elegant way to do this was detailed by Kahaly \textit{et al} \cite{kahalyDirectObservationDensityGradient2013}. Simply partially cover a mirror in the laser chain with a small mirror. One can control the difference in path length of light on this mirror by the mirror thickness and distance from the main laser mirror, thus producing a controllable prepulse. Since one has effectively apodised the beam, the parabola will then focus the prepulse spot to a larger area compared to the main pulse spot creating a uniform preplasma across the main spot while the diffraction-limited main spot will have little aberration due to the subtracted prepulse. By routinely imaging the spot one can adjust the prepulse mirror angle to ensure the prepulse spot coincides with the main pulse spot. The mirror should have a mirrored back surface and an AR-coated front surface with a slight angle between the two faces to prevent a parasitic prepulse.
+At some point, the signal will overshoot and enter the CWE regime, preferably early in the list of contingencies presented, and the preplasma scale length can now be optimised. Kahaly \textit{et al} \cite{kahalyDirectObservationDensityGradient2013} designed a simple but elegant method to do this. Simply partially cover a mirror in the laser chain with a small mirror. The difference in path length of light on this mirror is determined by the mirror thickness and distance from the main laser mirror surface. Thus this added prepulse arrival time at the target can be controlled. Since this has effectively apodised the beam, the parabola will then focus the prepulse spot to a larger area compared to the main pulse spot ensuring a uniform preplasma across the main spot while the diffraction-limited main spot will experience minimal aberration from to the subtracted prepulse. The target must be routinely monitored to ensure the prepulse spot coincides with the main pulse spot. The mirror should have a mirrored back surface and an AR-coated front surface with a slight angle between the two faces to prevent any parasitic prepulse.
 
-Kahaly \textit{et al} demonstrate a linear relationship between main pulse delay relative to prepulse and scale length (due to more time for the preplasma to expand) but also note that for the same scale length, a larger delay (accompanied by smaller energy in prepulse) produces higher quality harmonics. This could be understood as a natural consequence of the lower plasma temperatures, which improve the ability of the system to perform coherent SHHG behaviour. If we access harmonics using the Kahaly method, we could attempt to improve our signal by moving the prepulse mirror further from the main pulse mirror while also reducing the fraction of overlap between the two (reducing the prepulse energy). The Kahaly mirror should be placed before the final mirror. The further back in the chain it is placed, diffraction from the mount can cause greater danger.
-
-
+Kahaly \textit{et al} show a linear relationship between main pulse delay relative to prepulse and scale length (due to more time for the preplasma to expand) but also note that for the same scale length, a larger delay (accompanied by smaller energy in the prepulse) produces higher quality harmonics. This could be understood as a natural consequence of the lower plasma temperatures, which improve the ability of the system to perform coherent SHHG behaviour. If harmonics are accessed using the Kahaly method, the signal can be improved our signal by moving the prepulse mirror further from the main pulse mirror while also reducing the fraction of overlap between the two mirrors to reduce the energy in the prepulse. The Kahaly mirror should be placed before the final mirror before the parabola. The further back in the chain it is placed, diffraction from the mount can cause greater danger to the optical system. The linear relationship between main pulse delay and scale length coupled with the XUV HHG signal measurements can be applied to discrete changes to the system to quantify contrast improvements.
 
 \section{Beyond GEMINI PW}\label{sec:ch4-beyond}
+% TODO chapter summary
 Vulcan 2020
 
 Expand the range of targets A range of thick, flat solid targets are proposed to probe the density parameter space: diamond, a selection of plastics (polymethyl methacrylate, low and high-density polyethylene and polycarbonate) and mirrored targets, which produced interesting and slightly unexpected results in the ORION experiment. It would also be interesting to produce foam targets gaining access to the optimal low $S$ regime \cite{bataniPhysicsIssuesShock2014}.
